--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
           echo "::error file=entrypoint.sh,line=3,title=Error in container::The answer was not expected"
           exit 1
       - name: If failure
-        if: failure()
+        if: success()
         run: echo "Oops! Something went wrong"  
