--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         payload: |
           {
-            "channel": "#george-test",
+            "channel": "#random",
             "text": "Pull Request #${{ github.event.number }} has failed the CI checks.",
             "blocks": [
               {
