--- a/.github/actions/slack_notification/action.yml
+++ b/.github/actions/slack_notification/action.yml
@@ -22,6 +22,8 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+        uses: actions/checkout@v4.1.7
     - name: Notify Slack of Failure
       uses: slackapi/slack-github-action@v1.23.0
       with:
